@@ -1,3 +1,14 @@
+Mon Jan 24 12:09:14 2000  Irfan Pyarali  <irfan@cs.wustl.edu>
+
+	* ace/Connector.cpp (connect_i):
+	* ace/Strategies_T.cpp (ACE_Cached_Connect_Strategy::connect_svc_handler):
+
+	  Cannot use <sh> after the connector lock has been released since
+	  other threads now have access to <sh> and can reset it.  We must
+	  use <sh_copy> instead (even when activating the newly connected
+	  svc_handler).  This should help with TAO/tests/MT_Client
+	  crashes.
+
 Sun Jan 23 14:08:12 2000  Ossama Othman  <ossama@uci.edu>
 
 	* ace/OS.h (setgid):
@@ -34,7 +45,7 @@ Sat Jan 22 15:27:39 2000  Douglas C. Schmidt  <schmidt@danzon.cs.wustl.edu>
 
 	* ace/Svc_Conf_l.cpp: Updated this file to use the new
 	  "warning-free" generated file.
-  
+
 	* etc/Svc_Conf_l.cpp.diff: Commented out a YY_BREAK macro that was
 	  causing an "unreached statement" warning on some C++ compilers.
 	  Thanks to David Levine for reporting this.
